[build-system]
build-backend = "cmeel"
requires = ["cmeel-gmp", "cmeel-mpc", "cmeel-mpfr", "cmeel-texinfo", "cmeel[build]"]

[project]
description = "cmeel distribution for libgfortran"
license = "GPL-3.0-or-later"
name = "cmeel-libgfortran"
requires-python = ">= 3.8"
version = "13.2.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-libgfortran"
repository = "https://github.com/cmake-wheel/cmeel-libgfortran.git"

[tool.cmeel]
has-sitelib = false
run-tests = false

[tool.tomlsort]
all = true
